--- a/index.html
+++ b/index.html
@@ -58,42 +58,15 @@
             <article class="seccion-texto">
                 <h2 class="titulo-seccion">Introducción</h2>
                 <p>
-                    En este trabajo se analizaron variables relacionadas con el consumo de alcohol
-                    en adolescentes, consideradas como factores de riesgo: Edad: se refiere a los años
-                    cumplidos por los participantes, “la edad modula el rol de distintos factores de riesgo
-                    y de protección asociados con una mayor o menor probabilidad de uso y abuso de
-                    alcohol” (Masten et al., 2009, como se citó en Pilatti et al., 2012). Bebida alcohólica
-                    preferida: alude al tipo de bebida más elegida. Frecuencia de consumo: indica cada
-                    cuánto tiempo los adolescentes consumen alcohol. Consumo de alcohol de pares:
-                    refiere a la percepción del consumo dentro del grupo de amigos y por último
-                    consumo de alcohol parental: alude a la percepción del consumo de alcohol por
-                    parte de los padres, “la exposición a modelos de consumo de alcohol de padres y
-                    pares es una de las variables con mayor efecto sobre el uso de alcohol de los niños.
-                    Al respecto, la influencia del consumo parental parece ser más importante en las
-                    etapas iniciales del consumo, mientras que el consumo de pares parece influir en el
-                    inicio y también en la escalada del consumo” (Capaldi et al., 2009; Duncan, Duncan,
-                    & Strycker, 2006, como se citó en Pilatti et al., 2012). A partir de estas evidencias,
-                    surge el siguiente interrogante: ¿Cómo se caracterizan los patrones de consumo de
-                    alcohol (tipo de bebida y frecuencia) en adolescentes y qué percepción tienen del
-                    consumo de sus pares y padres?
+                    En este trabajo se analizaron variables relacionadas con el consumo de alcohol en adolescentes, consideradas como factores de riesgo. La variable edad, expresada en años cumplidos, dada que “la edad modula el rol de distintos factores de riesgo y de protección asociados con una mayor o menor probabilidad de uso y abuso de alcohol” (Masten et al., 2009, como se citó en Pilatti et al., 2012); las demás variables incluídas fueron: bebida alcohólica preferida: variable que indica la bebida alcohólica de mayor preferencia. Frecuencia de consumo: periodicidad con la que ocurre el consumo de alcohol. Consumo de alcohol de pares: percepción del consumo de alcohol en el grupo de amigos varones más cercanos y por último consumo de alcohol parental: percepción del consumo de alcohol por parte del padre o figura paterna, sobre estas dos últimas variables, se ha señalado que “la exposición a modelos de consumo de alcohol de padres y pares es una de las variables con mayor efecto sobre el uso de alcohol de los niños. Al respecto, la influencia del consumo parental parece ser más importante en las etapas iniciales del consumo, mientras que el consumo de pares parece influir en el inicio y también en la escalada del consumo” (Capaldi et al., 2009; Duncan, Duncan, & Strycker, 2006, como se citó en Pilatti et al., 2012). A partir de estas evidencias, surge el siguiente interrogante: ¿Cómo se caracterizan los patrones de consumo de alcohol (tipo de bebida y frecuencia) en adolescentes y qué percepción tienen del consumo de sus pares y padres?
                 </p>
             </article>
 
             <article class="seccion-texto">
                 <h2 class="titulo-seccion">Metodología</h2>
                 <p>
-                    La recolección de datos se realizó mediante un cuestionario dirigido a 204
-                    adolescentes, quienes respondieron en base a sus experiencias durante los últimos
-                    12 meses. Se registraron variables relacionadas con el consumo de alcohol. Se
-                    consultó la edad (nivel de medición proporcional, ya que tiene cero absoluto); la
-                    bebida alcohólica más consumida donde las categorías variaron entre cerveza, vino,
-                    fernet, gancia, otras, y “no tomo”, (nivel de medición nominal, ya que no hay un
-                    orden entre las opciones); la frecuencia de consumo, medida en una escala de 0 (no
-                    consumo) a 8 (4 o más veces por semana), (nivel ordinal, porque permite jerarquizar
-                    la frecuencia). Además, se les pidió estimar cuántos de sus amigos varones más
-                    cercanos consumen alcohol en una escala de 0= ninguno a 4= todos; (nivel de
-                    medición ordinal, porque las opciones tienen un orden) y si su padre o figura paterna
-                    <!-- Completa el texto si es necesario -->
+                    La recolección de datos se realizó mediante un cuestionario dirigido a 204 adolescentes, quienes respondieron en base a sus experiencias durante los últimos 12 meses. 
+                    Se midieron las siguientes variables: edad, medida en años cumplidos (nivel de medición proporcional); bebida alcohólica más consumida con categorías: cerveza, vino, fernet, gancia, otras, y “no tomo”, (nivel de medición nominal); la frecuencia de consumo, evaluada en una escala ordinal de “0 = no consumo” a “8 = 4 o más veces por semana”. Percepción del consumo de pares varones medida en una escala ordinal de “0 = ninguno” a “4 = todos”; y consumo parental percibido con dos categorías donde “0=No”, “1=Sí” (nivel de medición nominal).
                 </p>
             </article>
         </section>
@@ -203,7 +176,7 @@
 
         <!-- INICIO SECCIÓN DE BIBLIOGRAFÍA -->
         <section class="seccion-bibliografia">
-            <h2 class="titulo-seccion-principal">BIBLIOGRAFÍA:</h2>
+            <h3 class="titulo-seccion-principal">BIBLIOGRAFÍA:</h3>
             <ul class="lista-bibliografia">
                 <li>
                     Pilatti, A., Godoy, JC y Brussino, SA (2012). ANÁLISIS DE FACTORES QUE INFLUYEN SOBRE EL USO DE ALCOHOL DE NIÑOS: UN CAMINO DE ANÁLISIS PROSPECTIVO. <em>Salud y drogas</em>, <em>12</em>(2), 155-192.
